<?xml version="1.0"?>
<package>
  <name>scitos_bringup</name>
  <version>0.0.0</version>
  <description>The scitos_bringup package</description>

  <maintainer email="pulidofentanes@gmail.com">Jaime Pulido Fentanes</maintainer>

  <license>MIT</license>

  <author email="pulidofentanes@gmail.com">Jaime Pulido Fentanes</author>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>mongodb_store</run_depend>


  <export>


  </export>
</package>
